--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-hook-form": "^7.61.1",
     "react-router-dom": "^6.30.1",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
