--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,11 @@
   "files": [],
   "compilerOptions": {
     "noUnusedLocals": false,
-    "noUnusedParameters": false
+    "noUnusedParameters": false,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"]
+    }
   },
   "references": [
     { "path": "./tsconfig.app.json" },
