--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.3.7",
     "@radix-ui/react-icons": "^1.3.2",
     "@supabase/supabase-js": "^2.90.1",
+    "@tanstack/react-query": "^5.90.19",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.61.1",
